--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -10,7 +10,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap-table.js"></script>
-  <script src="js/misc.js"></script>
 </head>
 <body>
   <div class="container">
@@ -18,22 +17,22 @@
       <h1>Santa Cruz Beat</h1>
     </div>
     <div class="table-wrapper">
-    	<table id="concerts-table" data-toggle="table" data-pagination="true" data-page-size="40" data-page-list="[40, 100, All]" data-search="true" data-toolbar="#toolbar">
+    	<table id="concerts-table" data-toggle="table" data-pagination="true" data-page-size="40" data-page-list="[40, 100, All]" data-search="true" data-toolbar="#toolbar" data-sort-name="date" data-sort-order="desc">
         <thead>
           <tr>
-            <th data-sortable="true">Concert</th>
-            <th class="venue" data-sortable="true">Venue</th>
-            <th data-sortable="true">Description</th>
-            <th class="date">Time</th>
+            <th class="concert" data-sortable="true" data-sorter="alphabeticalSorter">Concert</th>
+            <th class="venue" data-sortable="true" data-sorter="alphabeticalSorter">Venue</th>
+            <th>Description</th>
+            <th class="date" data-field="date" data-sortable="true" data-sorter="dateSorter">Time</th>
           </tr>
         </thead>
         <tbody>
           <% @concerts.each do |concert| %>
             <tr>
-              <td class="main"><%= concert[:title] %></td>
+              <td class="main title-cell"><%= concert[:title] %></td>
               <td class="main"><%= concert[:venue] %></td>
-              <td class="main"><%= concert.truncated_description %></td>
-              <td class="main"><a href="<%= concert[:link] %>"><%= concert.local_date_time %></a></td>
+              <td class="main"><a href="<%= concert[:link] %>"></a><%= concert.truncated_description %></td>
+              <td class="main"><%= concert.local_date_time %></td>
             </tr>
           <% end %>
         </tbody>
@@ -41,5 +40,36 @@
     </div>
   </div>
 
+  <script>
+    $(document).ready( function() {
+      $('input.form-control').focus();
+      
+      $('tbody tr').click( function() {
+        var link = $(this).find('a').attr('href');
+        if(link.type != "undefined") {
+          window.location = link;
+        }
+      })
+    });
+
+    function dateSorter(a, b) {
+      console.log(a);
+      var dateA = Date.parse(a);
+      var dateB = Date.parse(b);
+      
+      if (dateA < dateB) return 1;
+      if (dateA > dateB) return -1;
+      return 0;
+    }
+
+    function alphabeticalSorter(a, b) {
+      var aChar = a[0];
+      var bChar = b[0];
+
+      if (aChar < bChar) return 1;
+      if (aChar > bChar) return -1;
+      return 0;
+    }
+  </script>
 </body>
 </html>
