--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -11,6 +11,11 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap-table.js"></script>
 </head>
+<style type='text/css'>@import url('http://getbarometer.s3.amazonaws.com/assets/barometer/css/barometer.css');</style>
+<script src='http://getbarometer.s3.amazonaws.com/assets/barometer/javascripts/barometer.js' type='text/javascript'></script>
+<script type="text/javascript" charset="utf-8">
+  BAROMETER.load('AXcCjEN1kzWM9sBGPTtE7');
+</script>
 <body>
   <div class="container">
     <div id="toolbar" class="btn-group">
@@ -24,6 +29,7 @@
             <th class="venue" data-sortable="true" data-sorter="alphabeticalSorter">Venue</th>
             <th>Description</th>
             <th class="date" data-field="date" data-sortable="true" data-sorter="dateSorter">Time</th>
+            <th class="more"></th>
           </tr>
         </thead>
         <tbody>
@@ -31,8 +37,9 @@
             <tr>
               <td class="main title-cell"><%= concert[:title] %></td>
               <td class="main"><%= concert[:venue] %></td>
-              <td class="main"><a href="<%= concert[:link] %>"></a><%= concert.truncated_description %></td>
+              <td class="main"><%= concert.truncated_description %></td>
               <td class="main"><%= concert.local_date_time %></td>
+              <td><a class="btn btn-primary" href="<%= concert[:link] %>">More info</a></td>
             </tr>
           <% end %>
         </tbody>
@@ -43,17 +50,9 @@
   <script>
     $(document).ready( function() {
       $('input.form-control').focus();
-      
-      $('tbody tr').click( function() {
-        var link = $(this).find('a').attr('href');
-        if(link.type != "undefined") {
-          window.location = link;
-        }
-      })
     });
 
     function dateSorter(a, b) {
-      console.log(a);
       var dateA = Date.parse(a);
       var dateB = Date.parse(b);
       
@@ -63,11 +62,11 @@
     }
 
     function alphabeticalSorter(a, b) {
-      var aChar = a[0];
-      var bChar = b[0];
+      var charA = a[0];
+      var charB = b[0];
 
-      if (aChar < bChar) return 1;
-      if (aChar > bChar) return -1;
+      if (charA < charB) return 1;
+      if (charA > charB) return -1;
       return 0;
     }
   </script>
