--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -16,6 +16,16 @@
 <script type="text/javascript" charset="utf-8">
   BAROMETER.load('AXcCjEN1kzWM9sBGPTtE7');
 </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61984503-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <body>
   <div class="container">
     <div id="toolbar" class="btn-group">
