--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -31,30 +31,33 @@
     <div id="toolbar" class="btn-group">
       <h1>Santa Cruz Beat</h1>
     </div>
-    <div>
-    	<table id="concerts-table" data-toggle="table" data-pagination="true" data-page-size="40" data-page-list="[40, 100, All]" data-search="true" data-toolbar="#toolbar" data-sort-name="date" data-sort-order="desc">
-        <thead>
-          <tr>
-            <th class="concert" data-sortable="true" data-sorter="alphabeticalSorter">Concert</th>
-            <th class="venue" data-sortable="true" data-sorter="alphabeticalSorter">Venue</th>
-            <th class="description">Description</th>
-            <th class="date" data-field="date" data-sortable="true" data-sorter="dateSorter">Time</th>
-            <th class="more"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @concerts.each do |concert| %>
+    <% @concert_days.each do |day, concerts| %>
+      <h4><%= Date.parse(day.to_s).strftime("%A %-m/%d") %></h4>
+      <div>
+      	<table class="concerts-table">
+          <thead>
             <tr>
-              <td class="main title-cell"><%= concert[:title] %></td>
-              <td class="venue"><%= concert[:venue] %></td>
-              <td class="description"><%= concert.truncated_description %></td>
-              <td class="main"><%= concert.local_date_time %></td>
-              <td><a class="btn btn-primary" href="<%= concert[:link] %>">More info</a></td>
+              <th class="concert" data-sortable="true" data-sorter="alphabeticalSorter">Concert</th>
+              <th class="venue" data-sortable="true" data-sorter="alphabeticalSorter">Venue</th>
+              <th class="description">Description</th>
+              <th class="date" data-field="date" data-sortable="true" data-sorter="dateSorter">Time</th>
+              <th class="more"></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+          </thead>
+          <tbody>
+            <% concerts.each do |concert| %>
+              <tr>
+                <td class="main title-cell"><%= concert[:title] %></td>
+                <td class="venue"><%= concert[:venue] %></td>
+                <td class="description"><%= concert.truncated_description %></td>
+                <td class="main"><%= concert.local_date_time %></td>
+                <td><a class="btn btn-primary" href="<%= concert[:link] %>">More info</a></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
   </div>
 
   <script>
