--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -3,16 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Concerts in Santa Cruz, California</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href='//fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/jquery.datepick.css"> 
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.jscroll.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/2.9.0/moment.min.js"></script>
-  <!-- Include Date Range Picker -->
-  <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/1/daterangepicker.js"></script>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/1/daterangepicker-bs3.css" />
+  <script type="text/javascript" src="js/jquery.plugin.js"></script> 
+  <script src="js/jquery.datepick.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,8 +29,15 @@
   BAROMETER.load('AXcCjEN1kzWM9sBGPTtE7');
 </script>
 <body>
-  <h1>Santa Cruz Beat</h1><input name="daterange">
   <div id="content-wrapper" class="container">
+    <div id="header" class="row">
+      <div class="col-md-8">
+        <a href="/"><h1>SANTA CRUZ BEAT</h1></a>
+      </div>
+      <div class="calendar-wrapper col-md-4">
+        <input id="hidden-date-input">
+      </div>
+    </div>
     <% @concert_days.each do |day, concerts| %>
     <div class="day-wrapper">
       <h4 class="date"><%= Date.parse(day.to_s).strftime("%A %-m/%d") %></h4>
@@ -40,10 +45,10 @@
       	<table class="table table-condensed concerts-table">
           <thead>
             <tr>
-              <th class="concert">Concert</th>
-              <th class="venue">Venue</th>
-              <th class="description">Description</th>
-              <th class="time">Time</th>
+              <th class="concert"></th>
+              <th class="venue"></th>
+              <th class="description"></th>
+              <th class="time"></th>
               <th class="more"></th>
             </tr>
           </thead>
@@ -66,21 +71,45 @@
 
   <script>
     $(document).ready( function() {
-      $('input.form-control').focus();
-      $('input[name="daterange"]').daterangepicker(
-      {
-        format: 'YYYY-MM-DD',
-        startDate: '2013-01-01',
-        endDate: '2013-12-31',
-        ranges: {
-          'Today': [moment(), moment()],
-          'This Week': [moment(), moment().add(6, 'days')],
-          'Next 30 Days': [moment(), moment().add(29, 'days')]
+      function getQueryVariable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split('&');
+        for (var i = 0; i < vars.length; i++) {
+          var pair = vars[i].split('=');
+          if (decodeURIComponent(pair[0]) == variable) {
+            return decodeURIComponent(pair[1]);
+          }
         }
-      }, 
-      function(start, end, label) {
-        alert("A new date range was chosen: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
-        $('#content-wrapper').html('');
+        null;
+      }
+
+      console.log(getQueryVariable('from_date'));
+
+      var today = new Date();
+      var toDate = new Date().setDate(today.getDate() + 30);
+
+      $('input.form-control').focus();
+      $('#hidden-date-input').datepick({
+        onClose: function(dates) {
+          if (dates[0] == undefined || dates[1] == undefined) {
+            return 0;
+          }
+          var date1 = new Date(dates[0]);
+          var date2 = new Date(dates[1]);
+          var date1Formatted = date1.getFullYear() + '-' + (date1.getMonth()+1) + '-' + date1.getDate();
+          var date2Formatted = date2.getFullYear() + '-' + (date2.getMonth()+1) + '-' + date2.getDate();
+
+          if (date1 == date2) {
+            window.location = '/?from_date=' + date1Formatted + '&to_date=' + date1Formatted;
+          } else {
+            window.location = '/?from_date=' + date1Formatted + '&to_date=' + date2Formatted;
+          }
+        },
+        showTrigger: '<button id="change-date-button" class="btn btn-primary change-date" name="daterange">Change Date <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></button>',
+        minDate: new Date(2014, 12-1, 25),
+        rangeSelect: true,
+        showAnim: 'slideDown',
+        showSpeed: 'fast'
       });
     });
   </script>
