forgot closing tag

--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>The best concerts in Santa Cruz, California</title>
-  <meta name="desciption" content="Listing all of the best concerts happening in downtown Santa Cruz, The Catalyst, Moe's Alley, Crepe Place, Kuumbwa Jazz Center, Rio Theatre, UC Santa Cruz, Crow's Nest, Corner Pocket, Blue Lagoon, Bocci's Cellar and more"
+  <meta name="desciption" content="Listing all of the best concerts happening in downtown Santa Cruz, The Catalyst, Moe's Alley, Crepe Place, Kuumbwa Jazz Center, Rio Theatre, UC Santa Cruz, Crow's Nest, Corner Pocket, Blue Lagoon, Bocci's Cellar and more">
 	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href='//fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/jquery.datepick.css"> 
