--- a/views/concerts.erb
+++ b/views/concerts.erb
@@ -28,7 +28,7 @@
   <div class="container-fluid">
     <div id="header" class="row">
       <div class="col-md-12">
-        <a href="/"><h1>Santa Cruz Beat</h1></a>
+        <a href="/"><h1>Santa Cruz Beat ♪</h1></a>
         <p>All the best concerts happening in Santa Cruz</p>
       </div>
     </div>
